# netops-stack

./: .gitignore  README.md  SECURITY.md  compose-ipfix.yaml  compose.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml
clickhouse/: Dockerfile.export-syslog-metrics  README.md  export-syslog-metrics.py  requirements-export.in  requirements-export.txt
cml/: BGP-EVPN.yaml  README.md
gitlab/: .gitlab-ci.yml  Dockerfile  requirements.in  requirements.txt
gitlab/ansible/: README.md  ansible.cfg
gitlab/ansible/group_vars/: all.yml
gitlab/ansible/inventory/: nb_inventory.yml
gitlab/ansible/playbooks/: apply_config.yml  collect_configs.yml  compare_configs.yml  diff_baseline.yml  rollback_configs.yml
gnmic/: README.md  gnmic-emitter.yaml  gnmic-ingestor-iosxe.yaml  gnmic-ingestor.yaml  gnmic-processor.yaml
grafana/dashboards/netops-stack/: gnmic.json
netbox/: README.md  netbox_device_roles.csv  netbox_device_types.yaml  netbox_devices.csv  netbox_manufacturers.csv  netbox_platforms.csv  netbox_regions.csv  netbox_sites.csv
netops-mcp-server/: Dockerfile  README.md  pyproject.toml
netops-mcp-server/src/netops_mcp_server/: __init__.py  clickhouse_tools.py  flow_resources.py  flow_tools.py  gitlab_tools.py  ios_xe_tools.py  netbox_tools.py  prometheus_tools.py  server.py
prometheus/: README.md  prometheus.yaml
