[project]
name = "netops-mcp-server"
version = "0.1.0"
description = "Combined MCP server for netops-stack: NetBox, Prometheus, ClickHouse, GitLab, IOS-XE (<50 tools)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.3",
    "pyjwt>=2.12.0",  # GHSA: override transitive PyJWT (crit header); Dependabot alert #1
    "httpx>=0.24",
    "requests>=2.28",
    "netmiko>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netops_mcp_server"]
