[project]
name = "netops-mcp-server"
version = "0.1.0"
description = "Combined MCP server for netops-stack: NetBox, Prometheus, ClickHouse, GitLab, IOS-XE (<50 tools)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.4",
    "pyjwt>=2.12.0",  # GHSA: override transitive PyJWT (crit header); Dependabot alert #1
    "cryptography>=46.0.7",  # CVE-2026-39892, CVE-2026-34073 (transitive via paramiko / PyJWT crypto)
    "python-multipart>=0.0.26",  # CVE-2026-40347 (transitive via Starlette/FastMCP)
    "pygments>=2.20.0",  # CVE-2026-4539 (transitive via pytest rich output)
    "httpx>=0.24",
    "requests>=2.28",
    "netmiko>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff"]  # CVE-2025-71176 fixed in 9.0.3

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netops_mcp_server"]
